--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "framer-motion": "^12.23.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-simple-keyboard": "^3.8.132"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
